fix: max width to avoid overlapping image

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,6 +6,10 @@ ion-badge {
   padding: 0.5em;
 }
 
+ion-icon {
+  max-width: 100%;
+}
+
 .modal-wrapper {
   min-height: 80vh !important;
 }
